[package]
name = "orchestrator"
version = "0.0.1"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }

serde_json = "1.0.88"
async-trait = "0.1.61"
prettytable-rs = "0.10"
thiserror = "1.0.38"
crossterm = "0.26.0"
aws-config = "0.54.1"
aws-sdk-ec2 = "0.24.0"
rand = "0.8.5"
plotters = "0.3.4"
glob = "0.3.1"
ssh2 = "0.9.4" # TODO: remove this dependency

prometheus-parse = { git = "https://github.com/mango-developer/prometheus-parse.git", rev = "80dbc854da8282f892f333377b4b4faa8c231c19" }

mysticeti-core = { path = "../mysticeti-core" }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "orchestrator"
path = "src/main.rs"